[workspace]
resolver = "2"
members = ["corylus-core", "corylus-http-proxy"]

[workspace.dependencies]
tokio = { version = "1.45.1", features = ["rt", "macros", "sync", "time"] }
futures = { version = "0.3.31" }
raft = { version = "0.7.0" }
protobuf = { version = "2.28.0" }
criterion = { version = "0.6.0" }
actix-web = { version = "4.11.0" }
reqwest = { version = "0.12", features = ["json"] }



