[package]
name = "corylus"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.22.0", features = ["v4"] }
twox-hash = "2.1.2"
rayon = "1.11.0"
rand = "0.10.0"
tracing = "0.1.44"
thiserror = "2.0.18"

[dev-dependencies]
tracing-subscriber = "0.3.23"

[lib]
name = "corylus"
path = "src/lib.rs"
