[package]
name = "corylus"
version = "0.1.0"
edition = "2024"

[dependencies]
uuid = { version = "1.22.0", features = ["v4"] }
twox-hash = "2.1.2"
async-io = "2.6.0"
rand = "0.10.0"
thiserror = "2.0.18"
event-listener = "5.4.1"
oneshot = { version = "0.2.1", features = ["std", "async"] }
futures = "0.3"
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
env_logger = "0.11"

[lib]
name = "corylus"
path = "src/lib.rs"
