[package]
name = "corylus-core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
raft = { workspace = true }
futures = { workspace = true }
protobuf = { workspace = true }
async-trait = "0.1.88"


[dev-dependencies]
criterion = { workspace = true }
corylus-http-proxy = { path = "../corylus-http-proxy" }


[[test]]
name = "node"
path = "tests/node.rs"

[[bench]]
name = "node"
path = "benches/node.rs"
harness = false

